added combining eff_trketa code

--- a/output_dev/perf_config.cfg
+++ b/output_dev/perf_config.cfg
@@ -1,7 +1,8 @@
-dataset_type:	pp
+dataset_type:	PbPb
 tracking_cut: ppTight
 id:
 
 module_eff_jetpt_jety: 1
 module_eff_trketa: 1
 
+centrality_scheme: 31
