updates to offline code, developing generalized systematics code

--- a/output_dev/unfold/ff_config.cfg
+++ b/output_dev/unfold/ff_config.cfg
@@ -1,10 +1,5 @@
-dataset_type:	PbPb
+dataset_type:	pp
 isMC:	0
+sys_mode:	-1
 
-diagnostic_mode:	0
-
-apply_UE_uncert: 0
-
-truthjet_mode: FS
-
-sys_mode: 101
+verbose:	1
