fixed labelling for deltapT plots

--- a/output_dev/unfold/sys_config.cfg
+++ b/output_dev/unfold/sys_config.cfg
@@ -1,7 +1,7 @@
 mode:			DeltaDpT
 #mode:			RDpT
-mode:			ChPS
-dataset_type:		pp
+#mode:			ChPS
+dataset_type:		PbPb
 
 isMC:			0
 centrality_scheme:	31
