Using en-dash for centrality intervals added options for different unfolding iterations started work on HEPData files Fixed labelling everywhere

--- a/output_dev/unfold/sys_config.cfg
+++ b/output_dev/unfold/sys_config.cfg
@@ -1,12 +1,11 @@
-#mode:			DeltaDpT
+#mode:			DeltaDpT, ChPS, RDpT
 #mode:			RDpT
 
 # integ_type:	lowpt_integ
 # integ_type:	jetshape
 
-mode:				ChPS
+mode:				DeltaDpT
 dataset_type:		pp
-#dataset_type:		PbPb
 
 
 
